# vim: set noexpandtab:
2012-09-12 Matt
	* Adding variables to do pdf rewighting. Event Class incremented.
	* tagging SusyNtuples-00-00-26
	
2012-09-08 Steve
	* Replace RESOST up/down terms with single term, to reflect change in SUSYTools
	* Tagging SusyNtuple-00-00-25

2012-09-06 Steve
	* Added jj methods findBestW, Mjj
	* Added separate pt cut for baseline jets, modified names of the signal cut constants
	* Added some additional lepton signal cut scenarios, commented out

2012-09-03 Matt
	* Added 4 Met Sys to SusyDefs

2012-09-03 Steve
	* Update trigger thresholds to match those of the 2-lep group

2012-08-30 Matt
	* Removed previous electron scale sys and replaced with 4 new shifts.	
	* Modified Sys enums in SusyDefs

2012-08-28 Steve
	* Add matchTruth flag to jets
	* Add boolean arguments to lepton IP methods to toggle usage of unbiased variables
		* Current biased values are still the default
	* Add variables to Tau: nTrack, author, eleBDT, jetBDT
	* Tagging SusyNtuple-00-00-24

2012-08-26 Steve
	* Added event weight functions for A-B3, A-B
	* Default event weight now uses A-D7 lumi and pileup weights
	* Tagging SusyNtuple-00-00-23

2012-08-21 Steve
	* Fixing global variable LUMI_A_B14: 5381 -> 5835 [1/pb]
		* I double checked the lumi calculation with lumi-calc
		  here: https://atlas-lumicalc.cern.ch/results/717050/result.html

2012-08-17 Steve
	* Updated to MultiLep-01-02-04 and SUSYTools-00-01-04
	* Tagging SusyNtuple-00-00-22

2012-08-13 Steve
	* Add flags for toggling signal lepton cuts for simple optimization studies

2012-08-10 Anyes
	* Update BTag MV1 weights to the lastest values for 2012 (85%:0.122 60%:0.98)
	  from here: https://twiki.cern.ch/twiki/bin/viewauth/AtlasProtected/BtagAnalysis172#LC_Jets
	
2012-08-09 Anyes
	* Add BTagCalib code & function in SusyNtTools to get the weight.
	* Some update to TGuiUtils

2012-08-08 Steve
	* Updated e-mu overlap removal to remove all possible pairings with each lepton